# GeneOut

./: Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac
Examples/: test_bs_0.1Ne.nex  test_bs_10.0Ne.nex
Examples/Alignments_SD_0.1Ne/Species1/: GeneFromSpecies1Set1_Mesq_0.nex  GeneFromSpecies1Set1_Mesq_1.nex  GeneFromSpecies1Set1_Mesq_2.nex  GeneFromSpecies1Set1_Mesq_3.nex  GeneFromSpecies1Set1_Mesq_4.nex  GeneFromSpecies1Set1_Mesq_5.nex  GeneFromSpecies1Set1_Mesq_6.nex  GeneFromSpecies1Set1_Mesq_7.nex  GeneFromSpecies1Set1_Mesq_8.nex  GeneFromSpecies1Set1_Mesq_9.nex
Examples/Alignments_SD_0.1Ne/Species2/: GeneFromSpecies2Set1_Mesq_0.nex  GeneFromSpecies2Set1_Mesq_1.nex  GeneFromSpecies2Set1_Mesq_2.nex  GeneFromSpecies2Set1_Mesq_3.nex  GeneFromSpecies2Set1_Mesq_4.nex  GeneFromSpecies2Set1_Mesq_5.nex  GeneFromSpecies2Set1_Mesq_6.nex  GeneFromSpecies2Set1_Mesq_7.nex  GeneFromSpecies2Set1_Mesq_8.nex  GeneFromSpecies2Set1_Mesq_9.nex
Examples/Alignments_SD_10.0Ne/Species1/: GeneFromSpecies1Set1_Mesq_0.nex  GeneFromSpecies1Set1_Mesq_1.nex  GeneFromSpecies1Set1_Mesq_2.nex  GeneFromSpecies1Set1_Mesq_3.nex  GeneFromSpecies1Set1_Mesq_4.nex  GeneFromSpecies1Set1_Mesq_5.nex  GeneFromSpecies1Set1_Mesq_6.nex  GeneFromSpecies1Set1_Mesq_7.nex  GeneFromSpecies1Set1_Mesq_8.nex  GeneFromSpecies1Set1_Mesq_9.nex
Examples/Alignments_SD_10.0Ne/Species2/: GeneFromSpecies2Set1_Mesq_0.nex  GeneFromSpecies2Set1_Mesq_1.nex  GeneFromSpecies2Set1_Mesq_2.nex  GeneFromSpecies2Set1_Mesq_3.nex  GeneFromSpecies2Set1_Mesq_4.nex  GeneFromSpecies2Set1_Mesq_5.nex  GeneFromSpecies2Set1_Mesq_6.nex  GeneFromSpecies2Set1_Mesq_7.nex  GeneFromSpecies2Set1_Mesq_8.nex  GeneFromSpecies2Set1_Mesq_9.nex
src/: Makefile.am  Makefile.in  alignment.cpp  alignment.h  alignmentgettaxa.cpp  alignments.cpp  alignmentsgettaxa.cpp  alignmentstest.cpp  alignmenttest.cpp  bepr.cpp  bootstrap.cpp  bootstrapparams.h  calcseqdiv.cpp  debugoutput.h  dnadist_F84-GR4_input_mult_TEMPLATE  dnadist_HKY85-GR4_input_mult_TEMPLATE  dnadist_JC_input  dnadist_JC_input_mult  dnadist_JC_input_mult_TEMPLATE  geneout.cpp  geneoutparameterstest.cpp  geneoutparams.cpp  geneoutparams.h  jackknife.cpp  jackknife.h  jkparams.h  kernelmethod.cpp  kernelmethod.h  kerneltricktest.cpp  matrix.cpp  matrix.h  mbparams.h  mbresults.h  multindparams.h  mww.cpp  mww.h  mwwtest.cpp  neighbor_input  neighbor_input_mult  neighbor_input_mult_TEMPLATE  (+23 more)
