bin_PROGRAMS = geneout alignmentsgettaxa alignmentstest permutationtest bepr treestovecs kerneltricktest mwwtest geneoutparameterstest calcseqdiv newtophy bootstrap

geneout_SOURCES = geneout.cpp kernelmethod.cpp jackknife.cpp alignment.cpp nexus.cpp matrix.cpp newickworker.cpp mww.cpp svmresults.cpp nexustreefile.cpp treefuncs.cpp geneoutparams.cpp jkparams.h treefuncs.h mbresults.h geneoutparams.h

permutationtest_SOURCES = permutationtest.cpp kernelmethod.cpp jackknife.cpp alignment.cpp nexus.cpp matrix.cpp newickworker.cpp nexustreefile.cpp treefuncs.cpp

bepr_SOURCES = bepr.cpp kernelmethod.cpp jackknife.cpp alignment.cpp nexus.cpp matrix.cpp newickworker.cpp nexustreefile.cpp treefuncs.cpp

treestovecs_SOURCES = treestovecs.cpp kernelmethod.cpp jackknife.cpp alignment.cpp nexus.cpp matrix.cpp newickworker.cpp nexustreefile.cpp treefuncs.cpp

kerneltricktest_SOURCES = kerneltricktest.cpp kernelmethod.cpp jackknife.cpp alignment.cpp nexus.cpp matrix.cpp newickworker.cpp nexustreefile.cpp treefuncs.cpp

geneoutparameterstest_SOURCES = geneoutparameterstest.cpp geneoutparams.cpp nexus.cpp

calcseqdiv_SOURCES = calcseqdiv.cpp alignment.cpp nexus.cpp

bootstrap_SOURCES = bootstrap.cpp alignment.cpp nexus.cpp

alignmentstest_SOURCES = alignmentstest.cpp alignment.cpp nexus.cpp

newtophy_SOURCES = newtophy.cpp alignment.cpp nexus.cpp

alignmentsgettaxa_SOURCES = alignmentsgettaxa.cpp alignment.cpp nexus.cpp

mwwtest_SOURCES = mwwtest.cpp mww.cpp

EXTRA_DIST = debugoutput.h alignment.h dnadist_JC_input dnadist_JC_input_mult dnadist_JC_input_mult_TEMPLATE jackknife.h kernelmethod.h neighbor_input neighbor_input_mult neighbor_input_mult_TEMPLATE run_dnadist_neighbor run_dnadist_neighbor_mult runmultmrbayes nexus.h matrix.h newickworker.h mww.h tempprefix.h mbparams.h multindparams.h sampleparams.h svmresults.h nexustreefile.h

